package com.nextpoorslob.userservice.model;

public class AddressType {
}
